--- a/styleWide.css
+++ b/styleWide.css
@@ -1,63 +1,90 @@
 /* Make it look pretty */
 /* 6 x 7 playing space */
 /* Keyframes for tokens dropping into place */
+
 .title{
-    /* border: solid black; */
+    border: solid #09507C;
+    border-radius: 10px;
+    background-color: #09507C;
     text-align: center;
     margin-top: 1%;
+    margin-left: 5%;
+    width: 90%;
     color: white;
     text-shadow: -1px -1px 0 #DC3545, 1px -1px 0 #DC3545, -1px 1px 0 #DC3545, 1px 1px 0 #DC3545;
     text-shadow: -2px -2px 0 #DC3545, 2px -2px 0 #DC3545, -2px 2px 0 #DC3545, 2px 2px 0 #DC3545;
 }
 .tokenContainer {
     border: solid #09507C;
+    background-color: none;
     border-width: 10px;
     border-radius: 10px;
     width: 50%;
-    height: 90%;
+    height: 70%;
     margin-left: 25%;
-    margin-top: 1.5%;
+    margin-top: 5%;
     display: flex;
     flex-flow: wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    position: absolute;
   }
   
   .tokenContainer div {
     border: solid #09507C;
     border: width 1px;
-    border-radius: 15px;
+    border-radius: 20px;
     width: 14%;
-    height: 100px;
+    height: 16.4%;
+    margin: 1px;
+    padding: 5px;
+  }
+  .tokenContainer div:hover {
+    border: solid #09507C;
+    border: width 1px;
+    border-radius: 15px;
+    background-color: lightgrey;
+    width: 13.8%;
+    height: 15.8%;
     margin: 1px;
     padding: 5px;
   }
   
+  
   .playerOne {
     background-color: yellow;
-    border-radius: 10px;
     /* z-index: 1; */
   }
   
   .playerTwo {
     background-color: red;
-    border-radius: 10px;
     /* z-index: 1; */
   }
   #hidden{
-    height: 1px;
-    background-color: white;
-    border: solid white;
+    height: 0px;
+    display: none;
   }
   .winScreen{
     position: absolute;
-    background-color: rgba(0, 156, 0, 0.801);
-    border: solid rgba(0, 156, 0, 0.801);
+    background-color: rgba(2, 190, 2, 0.9);
+    border: solid rgba(0, 130, 0, 0.9);
     border-radius: 5px;
-    width: 80%;
-    height: 75%;
-    margin-left: 10%;
-    margin-top: 0%;
+    width: 70%;
+    height: 85%;
+    margin-left: 15%;
+    margin-top: 2%;
     text-align: center;
     z-index: 10;
     display: none;
+    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+  }
+  .turnOrder{
+    border: solid #09507C;
+    border-radius: 10px;
+    padding: .5%;
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    margin-left: 5%;
+    margin-top: 10%;
+    text-align: center;
   }
