--- a/styleMed.css
+++ b/styleMed.css
@@ -88,3 +88,21 @@
     margin-top: 11%;
     text-align: center;
   }
+  .instructionButton{
+    /* border: solid black; */
+    justify-content: center;
+    display: flex;
+    margin-top: 1%;
+}
+  .instructions{
+    border: solid #09507C;
+    text-align: center;
+    font-size: 20px;
+    color: black;
+    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+    border-radius: 5px;
+    display: none;
+    margin-left: 1%;
+    margin-top: 1%;
+    width: 98%;
+  }
