--- a/styleSmall+.css
+++ b/styleSmall+.css
@@ -44,7 +44,7 @@
     border: width 1px;
     border-radius: 10%;
     background-color: lightgrey;
-    width: 13.9%;
+    width: 12.8%;
     height: 16%;
     margin: 1px;
     padding: 5px;
@@ -90,3 +90,20 @@
     margin-top: 11%;
     text-align: center;
   }
+.instructionButton{
+    /* border: solid black; */
+    justify-content: center;
+    display: flex;
+    margin-top: 1%;
+}
+.instructions{
+    border: solid #09507C;
+    text-align: center;
+    font-size: 20px;
+    color: black;
+    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+    border-radius: 5px;
+    display: none;
+    margin-left: 1%;
+    width: 98%;
+}
