--- a/styleSmall.css
+++ b/styleSmall.css
@@ -2,89 +2,104 @@
     background-color: lemonchiffon;
 } */
 
-.title{
-    font-size: 30px;
-    border: solid #09507C;
-    border-radius: 10px;
-    background-color: #09507C;
-    text-align: center;
-    margin-top: 1%;
-    margin-left: 5%;
-    width: 90%;
-    color: white;
-    text-shadow: -1px -1px 0 #DC3545, 1px -1px 0 #DC3545, -1px 1px 0 #DC3545, 1px 1px 0 #DC3545;
-    text-shadow: -2px -2px 0 #DC3545, 2px -2px 0 #DC3545, -2px 2px 0 #DC3545, 2px 2px 0 #DC3545;
+.title {
+  font-size: 32px;
+  border: solid #09507c;
+  border-radius: 10px;
+  background-color: #09507c;
+  text-align: center;
+  margin-top: 1%;
+  margin-left: 5%;
+  width: 90%;
+  color: white;
+  text-shadow: -1px -1px 0 #dc3545, 1px -1px 0 #dc3545, -1px 1px 0 #dc3545,
+    1px 1px 0 #dc3545;
+  text-shadow: -2px -2px 0 #dc3545, 2px -2px 0 #dc3545, -2px 2px 0 #dc3545,
+    2px 2px 0 #dc3545;
 }
 .tokenContainer {
-    border: solid #09507C;
-    background-color: none;
-    border-width: 10px;
-    border-radius: 10px;
-    width: 60%;
-    height: 70%;
-    margin-left: 20%;
-    margin-top: 5%;
-    display: flex;
-    flex-flow: wrap;
-    justify-content: space-around;
-    position: absolute;
-  }
-  
-  .tokenContainer div {
-    border: solid #09507C;
-    border: width 1px;
-    border-radius: 10%;
-    width: 13.2%;
-    height: 16.4%;
-    margin: 1px;
-    padding: 5px;
-  }
-  .tokenContainer div:hover {
-    border: solid #09507C;
-    border: width 1px;
-    border-radius: 10%;
-    background-color: lightgrey;
-    width: 13.2%;
-    height: 16.4%;
-  }
-  
-  
-  .playerOne {
-    background-color: yellow;
-    /* z-index: 1; */
-  }
-  
-  .playerTwo {
-    background-color: red;
-    /* z-index: 1; */
-  }
-  #hidden{
-    height: 0px;
-    display: none;
-  }
-  .winScreen{
-    position: absolute;
-    background-color: rgba(2, 190, 2, 0.9);
-    border: solid rgba(0, 130, 0, 0.9);
-    border-radius: 5px;
-    width: 65%;
-    height: 75%;
-    margin-left: 17.5%;
-    margin-top: 3%;
-    text-align: center;
-    z-index: 10;
-    display: none;
-    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
-  }
-  .turnOrder{
-    font-size: 20px;
-    border: solid #09507C;
-    border-radius: 10px;
-    padding: .5%;
-    position: absolute;
-    width: 25%;
-    height: fit-content;
-    margin-left: 37.5%;
-    margin-top: 145%;
-    text-align: center;
-  }
+  border: solid #09507c;
+  background-color: none;
+  border-width: 10px;
+  border-radius: 10px;
+  width: 60%;
+  height: 70%;
+  margin-left: 20%;
+  margin-top: 5%;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-around;
+  position: absolute;
+}
+
+.tokenContainer div {
+  border: solid #09507c;
+  border: width 1px;
+  border-radius: 10%;
+  width: 13.2%;
+  height: 16.4%;
+  margin: 1px;
+  padding: 5px;
+}
+.tokenContainer div:hover {
+  border: solid #09507c;
+  border: width 1px;
+  border-radius: 10%;
+  background-color: lightgrey;
+  width: 13.2%;
+  height: 16.4%;
+}
+
+.playerOne {
+  background-color: yellow;
+  /* z-index: 1; */
+}
+
+.playerTwo {
+  background-color: red;
+  /* z-index: 1; */
+}
+#hidden {
+  height: 0px;
+  display: none;
+}
+.winScreen {
+  position: absolute;
+  background-color: rgba(2, 190, 2, 0.9);
+  border: solid rgba(0, 130, 0, 0.9);
+  border-radius: 5px;
+  width: 65%;
+  height: 75%;
+  margin-left: 17.5%;
+  margin-top: 3%;
+  text-align: center;
+  z-index: 10;
+  display: none;
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+    1px 1px 0 #fff;
+}
+.turnOrder {
+  font-size: 20px;
+  border: solid #09507c;
+  border-radius: 10px;
+  padding: 0.5%;
+  position: relative;
+  width: 40%;
+  height: fit-content;
+  margin-left: 30%;
+  margin-top: 160%;
+  text-align: center;
+}
+.instructions {
+  border: solid #09507c;
+  text-align: center;
+  font-size: 20px;
+  color: black;
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+    1px 1px 0 #fff;
+  border-radius: 5px;
+  display: none;
+  margin-left: 1%;
+  margin-top: 1%;
+  width: 98%;
+}
