--- a/styleWide.css
+++ b/styleWide.css
@@ -2,6 +2,7 @@
 /* 6 x 7 playing space */
 /* Keyframes for tokens dropping into place */
 
+
 .title{
     font-size: 35px;
     border: solid #09507C;
@@ -89,4 +90,22 @@
     margin-left: 5%;
     margin-top: 10%;
     text-align: center;
+  }
+  .instructionButton{
+    /* border: solid black; */
+    justify-content: center;
+    display: flex;
+    margin-top: 1%;
+}
+  .instructions{
+    border: solid #09507C;
+    text-align: center;
+    font-size: 20px;
+    color: black;
+    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+    border-radius: 5px;
+    display: none;
+    margin-left: 1%;
+    margin-top: 1%;
+    width: 98%;
   }
