--- a/styleWide.css
+++ b/styleWide.css
@@ -1,23 +1,23 @@
 /* Make it look pretty */
 /* 6 x 7 playing space */
 /* Keyframes for tokens dropping into place */
-
-
+*{
+  background-color: #EDDDD4;
+}
 .title{
     font-size: 35px;
-    border: solid #09507C;
+    border: solid #197278;
     border-radius: 10px;
-    background-color: #09507C;
+    background-color: #197278;
     text-align: center;
-    margin-top: 1%;
-    margin-left: 5%;
-    width: 90%;
+    padding-top: 1%;
+    width: 100%;
     color: white;
-    text-shadow: -1px -1px 0 #DC3545, 1px -1px 0 #DC3545, -1px 1px 0 #DC3545, 1px 1px 0 #DC3545;
-    text-shadow: -2px -2px 0 #DC3545, 2px -2px 0 #DC3545, -2px 2px 0 #DC3545, 2px 2px 0 #DC3545;
+    text-shadow: -1px -1px 0 #772E25, 1px -1px 0 #772E25, -1px 1px 0 #772E25, 1px 1px 0 #772E25;
+    text-shadow: -2px -2px 0 #772E25, 2px -2px 0 #772E25, -2px 2px 0 #772E25, 2px 2px 0 #772E25;
 }
 .tokenContainer {
-    border: solid #09507C;
+    border: solid #283D3B;
     background-color: none;
     border-width: 10px;
     border-radius: 10px;
@@ -31,8 +31,8 @@
     position: absolute;
   }
   
-  .tokenContainer div {
-    border: solid #09507C;
+  .tokenContainer  div{
+    border: solid #283D3B;
     border: width 1px;
     border-radius: 10%;
     width: 14%;
@@ -41,7 +41,7 @@
     padding: 5px;
   }
   .tokenContainer div:hover {
-    border: solid #09507C;
+    border: solid #283D3B;
     border: width 1px;
     border-radius: 10%;
     background-color: lightgrey;
@@ -50,15 +50,17 @@
     margin: 1px;
     padding: 5px;
   }
-  
+  .white{
+    background-color: white;
+  }
   
   .playerOne {
-    background-color: yellow;
+    background-color: #C4A137;
     /* z-index: 1; */
   }
   
   .playerTwo {
-    background-color: red;
+    background-color: #772E25;
     /* z-index: 1; */
   }
   #hidden{
@@ -67,11 +69,11 @@
   }
   .winScreen{
     position: absolute;
-    background-color: rgba(2, 190, 2, 0.9);
-    border: solid rgba(0, 130, 0, 0.9);
+    background-color: rgba(25, 120, 82, 0.9);
+    border: solid rgba(25, 120, 82, 0.9);
     border-radius: 5px;
     width: 70%;
-    height: 85%;
+    height: 80%;
     margin-left: 15%;
     margin-top: 2%;
     text-align: center;
@@ -79,33 +81,36 @@
     display: none;
     text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
   }
+  .winScreenText{
+    background-color: rgba(2, 190, 2, 0.0);
+  }
+  #winTitle, #winText{
+    background-color: rgba(2, 190, 2, 0.0);
+  }
   .turnOrder{
     font-size: 25px;
-    border: solid #09507C;
+    border: solid #283D3B;
     border-radius: 10px;
     padding: .5%;
     position: absolute;
-    width: fit-content;
+    width: 19%;
     height: fit-content;
     margin-left: 5%;
     margin-top: 10%;
     text-align: center;
   }
   .instructionButton{
-    /* border: solid black; */
     justify-content: center;
     display: flex;
-    margin-top: 1%;
+    padding-top: 1%;
+    
 }
   .instructions{
-    border: solid #09507C;
+    border: solid #283D3B;
     text-align: center;
     font-size: 20px;
     color: black;
     text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
     border-radius: 5px;
     display: none;
-    margin-left: 1%;
-    margin-top: 1%;
-    width: 98%;
   }
